# git-analyzer

./: .gitignore  INSTALLATION.md  README.md  graph.py  install.sh  main.py  models.py  nodes.py  pyproject.toml  requirements.txt  state.py  user_config.json
src/: config.py  messages.py  usage_tracker.py
src/cli/: command_completer.py  interactive_input.py  non_blocking_input.py  streaming_output.py  ui.py
src/core/: edges.py  graph.py  nodes.py  router.py  state.py
src/notifications/: __init__.py  action_executor.py  dbus_monitor.py  interactive_menu.py  notification_manager.py  suggestion_builder.py
src/providers/: agents.py  chains.py  llm_providers.py  llms.py  prompts.py
src/providers/tools/: analyzer_tools.py  file_tools.py
src/watcher/: file_watcher.py  global_file_watcher.py
