[project]
name = "git-ai-agent"
version = "0.1.0"
description = "An AI-powered Git assistant using LangGraph."
authors = [{ name = "Pedro Castanheira", email = "pedrocastanhacosta1945@gmail.com" }]
dependencies = [
    "gitpython>=3.1.40",
    "langgraph>=1.0.0,<2.0.0",
    "langchain>=0.3.0,<1.0.0",
    "langchain-anthropic>=0.3.0,<1.0.0",
    "langchain-openai>=0.2.0,<1.0.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "google-generativeai>=0.8.0,<1.0.0"
]
requires-python = ">=3.9"

[project.scripts]
castanhafodao = "main:main"

[tool.setuptools]
package-dir = {"" = "."}
